--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,8 @@
 #root {
   max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+  width: 100vw;
+  margin: 0;
+  padding: 0rem;
   text-align: center;
+  /* background-color: rgb(50, 79, 99); */
 }
