--- a/src/components/BookUser.module.scss
+++ b/src/components/BookUser.module.scss
@@ -22,11 +22,12 @@
 }
 .bookTitle {
   margin-bottom: 30px;
-  color: #6b5a87;
+  color: #af6f2a;
 }
 .bookingBtn {
   margin-top: 20px;
-  background-color: #6b5a87;
+  // background-color: #6b5a87;
+  background-image: linear-gradient(rgb(120, 81, 22), rgb(244, 191, 156));
   color: rgb(255, 255, 255);
 }
 .select {
