--- a/src/components/Header.module.scss
+++ b/src/components/Header.module.scss
@@ -8,7 +8,7 @@
     rgb(229, 214, 245)
   );
   // background-color: rgb(66, 65, 67);
-  color: rgb(246, 243, 243);
+  color: #875621;
   max-width: 100vw;
   margin: 0px;
   padding: -px;
@@ -33,11 +33,11 @@
 .icons {
   display: flex;
   justify-content: space-around;
-  color: rgb(246, 243, 243);
+  color: #875621;
 }
 .link {
   text-decoration: none;
-  color: rgb(246, 243, 243);
+  color: #875621;
 }
 // .btn {
 //   position: fixed;
