--- a/src/components/NavLinks.module.scss
+++ b/src/components/NavLinks.module.scss
@@ -5,14 +5,33 @@
 .flex {
   display: flex;
   flex-direction: column;
-  z-index: 6;
+  // z-index: 6;
+  max-width: 170px;
+  width: 100%;
+  height: 220px;
+  position: fixed;
+  padding: 50px;
+  top: 23%;
+  left: 90%;
+
+  transform: translate(-50%, -50%);
   background-color: rgb(216, 206, 234);
+  row-gap: 30px;
   //   background-color: #fee6f6;
   color: rgb(36, 26, 36);
   padding: 8px;
+  box-shadow: 0px 0px 18px 0px rgba(0, 0, 0, 0.75);
+  border-radius: 8px;
+  background-image: linear-gradient(rgb(120, 81, 22), rgb(244, 191, 156));
 }
 
 .link {
   text-decoration: none;
   color: rgb(36, 26, 36);
+}
+
+.closeBtn {
+  position: fixed;
+  top: 180px;
+  left: 7px;
 }
