--- a/src/components/Header.module.scss
+++ b/src/components/Header.module.scss
@@ -9,7 +9,7 @@
   );
   // background-color: rgb(66, 65, 67);
   color: #875621;
-  max-width: 100vw;
+  width: 100vw;
   margin: 0px;
   padding: -px;
   // background-color: rgb(208, 188, 248);
@@ -19,6 +19,8 @@
 }
 .nav {
   z-index: 2;
+  width: 40px;
+  height: 40px;
 }
 
 .headCenter {
@@ -26,8 +28,10 @@
   flex-direction: column;
   justify-content: center;
   text-align: center;
-  row-gap: 30px;
+  row-gap: 10px;
   width: 30%;
+  font-size: x-large;
+  font-weight: bold;
 }
 
 .icons {
