--- a/src/components/LogOut.module.scss
+++ b/src/components/LogOut.module.scss
@@ -5,3 +5,11 @@
   row-gap: 10px;
   padding: 10px;
 }
+.submitButton {
+  background-color: #d8bfd8;
+  font-weight: bold;
+  border: none;
+  border-radius: 20px;
+  width: 120px;
+  height: 40px;
+}
