--- a/src/components/LoginForm.module.scss
+++ b/src/components/LoginForm.module.scss
@@ -4,10 +4,14 @@
   justify-content: center;
   align-content: space-around;
 }
-
+.LoginForm .container {
+  display: flex;
+  justify-content: center;
+}
 .LoginForm .form {
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-content: space-between;
   width: 30rem;
   height: 15rem;
