--- a/src/components/NavLinks.module.scss
+++ b/src/components/NavLinks.module.scss
@@ -5,18 +5,18 @@
 .flex {
   display: flex;
   flex-direction: column;
+  justify-content: center;
   // z-index: 6;
   max-width: 170px;
   width: 100%;
-  height: 220px;
+  height: 24xs0px;
   position: fixed;
   padding: 50px;
   top: 23%;
   left: 90%;
-
   transform: translate(-50%, -50%);
   background-color: rgb(216, 206, 234);
-  row-gap: 30px;
+  row-gap: 20px;
   //   background-color: #fee6f6;
   color: rgb(36, 26, 36);
   padding: 8px;
@@ -27,11 +27,13 @@
 
 .link {
   text-decoration: none;
+  font-weight: bold;
   color: rgb(36, 26, 36);
 }
 
 .closeBtn {
-  position: fixed;
-  top: 180px;
-  left: 7px;
+  background-image: linear-gradient(rgb(244, 191, 156), rgb(120, 81, 22));
+  font-weight: bold;
+  border: solid grey 1px;
+  border-radius: 10px;
 }
