--- a/src/pages/Services.module.scss
+++ b/src/pages/Services.module.scss
@@ -15,6 +15,20 @@
   margin: 20px;
   background-color: white;
 }
+@media screen and (max-width: 900px) {
+  .block {
+    display: flex;
+    flex-direction: column;
+    margin: 20px;
+    background-color: white;
+  }
+  .img {
+    width: 85vw;
+    height: 30vh;
+    margin: 5px;
+    object-fit: cover;
+  }
+}
 .book {
   margin-top: 20px;
   margin-bottom: 20px;
@@ -25,6 +39,17 @@
   justify-content: center;
   align-items: center;
   font-size: 5vh;
+}
+.bookingBtn {
+  margin-top: 20px;
+  // background-color: #6b5a87;
+  background-image: linear-gradient(rgb(120, 81, 22), rgb(244, 191, 156));
+  color: rgb(255, 255, 255);
+  width: 320px;
+  height: 50px;
+  border-radius: 10px;
+  font-size: medium;
+  font-weight: bolder;
 }
 .link {
   text-decoration: none;
